--- a/acados/ocp_nlp/Makefile
+++ b/acados/ocp_nlp/Makefile
@@ -48,6 +48,7 @@ OBJS += ocp_nlp_dynamics_common.o
 OBJS += ocp_nlp_dynamics_cont.o
 OBJS += ocp_nlp_dynamics_disc.o
 OBJS += ocp_nlp_sqp.o
+OBJS += ocp_nlp_zo_sqp.o
 OBJS += ocp_nlp_sqp_rti.o
 OBJS += ocp_nlp_reg_common.o
 OBJS += ocp_nlp_reg_convexify.o
